--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "tauri": "tauri",
+    "tauri:dev": "tauri dev",
+    "tauri:build": "tauri build",
+    "tauri:icons": "tauri icon public/icon.png"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -23,6 +27,7 @@
     "quantize": "^1.0.2"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^2.2.2",
     "@eslint/js": "^9.17.0",
     "@types/node": "^22.10.2",
     "@types/react": "^18.3.18",
